add coverage run in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
 script:
 - black --check .
 - flake8 .
+- coverage run --source=mysite,polls manage.py test
 - python3 manage.py migrate
 - python3 manage.py test polls
 deploy:
