--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ PyYAML==6.0.2
 requests==2.32.3
 semantic-version==2.10.0
 six==1.15.0
-sqlparse==0.5.1coverage 
+sqlparse==0.5.1
 termcolor==2.4.0
 typing_extensions==4.12.2
 urllib3==1.26.20
