--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,11 @@ script:
 after_script:
 - echo "Finished deploying!"
 - coveralls
+
+env:
+  global:
+    - COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN
+
 deploy:
   provider: elasticbeanstalk
   access_key_id: $AWS_ACCESS_KEY_ID
@@ -31,6 +36,4 @@ deploy:
   on:
     branch: main
 
-env:
-global:
-  - COVERALLS_REPO_TOKEN=Kc3QtWhSDxzf88B9WhPAAlphz0EAnKSz4
+
